--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -32,7 +32,7 @@
           Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.TimeWithMultChar}} 
       </ion-card-content>
     </ion-card>
-    <ion-card *ngIf="card.Helipad" tappable (click)="goToRoute(card)" text-wrap [style.background-color]="card.colour">
+    <ion-card *ngIf="card.Helipad" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour">
       <ion-card-content>
         <ion-card-title>
         {{card.name}} <h1> <img src= "./assets/imgs/Helicopter.png" style="float:right"></h1>
@@ -41,7 +41,7 @@
           Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.TimeWithMultChar}} 
       </ion-card-content>
     </ion-card>
-    <ion-card *ngIf="card.Airport" tappable (click)="goToRoute(card)" text-wrap [style.background-color]="card.colour">
+    <ion-card *ngIf="card.Airport" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour">
       <ion-card-content>
         <ion-card-title>
         {{card.name}} <h1> <img src= "./assets/imgs/Airplane.png" style="float:right"></h1>
