--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -1,37 +1,59 @@
 <ion-header>
   <ion-navbar color="steelblue2">
     <ion-title>
-      Treatment
+      Treatment Options
     </ion-title>
   </ion-navbar>
   <components-timer></components-timer>
 </ion-header>
 
+<script src="treatment.ts"></script>
+
 <ion-content padding id="page4">
-   
+  <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b>
+    <img src= {{this.Data.origin_icon}} style="vertical-align: middle;"></p>
   <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
     tPA
   </h4>
-  <form id="treatment-form9">
-    <ion-item id="treatment-textarea2">
-      <ion-label>
-        Option 1...
-      </ion-label>
-      <ion-textarea placeholder=""></ion-textarea>
+  <spinner *ngIf="Spinner"></spinner>
+  <div class="card-scroll" *ngIf="show">
+  <div class="card-scroll" *ngIf="show">
+
+    <ion-scroll scrollY="true" style="height: 20vh;">
+  <ion-list justify-content-center align-items-center>
+    <ion-item *ngFor="let card of cards">
+      <ion-card *ngIf="card.Driving" tappable (click)="goToRoute(card)" text-wrap [style.background-color]="card.colour">
+        <ion-card-content>
+          <ion-card-title>
+          {{card.name}} <h1> <img src= "./assets/imgs/ambulance.png" style="float:right"></h1>
+          </ion-card-title>
+        <p id="cardinfo" >
+            Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.TimeWithMultChar}} 
+        </ion-card-content>
+      </ion-card>
+      <ion-card *ngIf="card.Helipad" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour">
+        <ion-card-content>
+          <ion-card-title>
+          {{card.name}} <h1> <img src= "./assets/imgs/Helicopter.png" style="float:right"></h1>
+          </ion-card-title>
+        <p id="cardinfo" >
+            Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.TimeWithMultChar}} 
+        </ion-card-content>
+      </ion-card>
+      <ion-card *ngIf="card.Airport" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour">
+        <ion-card-content>
+          <ion-card-title>
+          {{card.name}} <h1> <img src= "./assets/imgs/Airplane.png" style="float:right"></h1>
+          </ion-card-title>
+        <p id="cardinfo" >
+            Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.TimeWithMultChar}} 
+        </ion-card-content>
+      </ion-card>
     </ion-item>
-    <ion-item id="treatment-textarea3">
-      <ion-label>
-        Option 2...
-      </ion-label>
-      <ion-textarea placeholder=""></ion-textarea>
-    </ion-item>
-    <ion-item id="treatment-textarea4">
-      <ion-label>
-        Option 3...
-      </ion-label>
-      <ion-textarea placeholder=""></ion-textarea>
-    </ion-item>
-  </form>
+  </ion-list>
+  </ion-scroll>
+  </div>
+  </div>
   <h4 id="treatment-heading7" style="color:#000000;font-size: x-large;">
     EVT 
   </h4>
