--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -15,9 +15,9 @@
   <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
     tPA
   </h4>
-  <spinner *ngIf="Spinner"></spinner>
-  <div class="card-scroll" *ngIf="show">
-  <div class="card-scroll" *ngIf="show">
+  <spinner *ngIf="tpaSpinner"></spinner>
+  <div class="card-scroll" *ngIf="tpashow">
+  
 
     <ion-scroll scrollY="true" style="height: 20vh;">
   <ion-list justify-content-center align-items-center>
@@ -53,32 +53,45 @@
   </ion-list>
   </ion-scroll>
   </div>
-  </div>
+
   <h4 id="treatment-heading7" style="color:#000000;font-size: x-large;">
     EVT 
   </h4>
-  <form id="treatment-form10">
-    <ion-item id="treatment-textarea5">
-      <ion-label>
-        Option 1...
-      </ion-label>
-      <ion-textarea placeholder=""></ion-textarea>
-    </ion-item>
-    <ion-item id="treatment-textarea6">
-      <ion-label>
-        Option 2...
-      </ion-label>
-      <ion-textarea placeholder=""></ion-textarea>
-    </ion-item>
-    <ion-item id="treatment-textarea7">
-      <ion-label>
-        Option 3...
-      </ion-label>
-      <ion-textarea placeholder=""></ion-textarea>
-    </ion-item>
-    <div class="spacer" style="width:300px;height:21px;" id="treatment-spacer12"></div>
-    <button id="treatment-button9" ion-button color="steelblue1" block on-click="goToMap()">
-      Next
-    </button>
-  </form>
+  <spinner *ngIf="evtSpinner"></spinner>
+  <div class="card-scroll" *ngIf="evtshow">
+  <ion-scroll scrollY="true" style="height: 20vh;">
+    <ion-list justify-content-center align-items-center>
+      <ion-item *ngFor="let card of EvtCards">
+        <ion-card *ngIf="card.Driving" tappable (click)="goToRoute(card)" text-wrap [style.background-color]="card.colour">
+          <ion-card-content>
+            <ion-card-title>
+            {{card.name}} <h1> <img src= "./assets/imgs/ambulance.png" style="float:right"></h1>
+            </ion-card-title>
+          <p id="cardinfo" >
+              Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.TimeWithMultChar}} 
+          </ion-card-content>
+        </ion-card>
+        <ion-card *ngIf="card.Helipad" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour">
+          <ion-card-content>
+            <ion-card-title>
+            {{card.name}} <h1> <img src= "./assets/imgs/Helicopter.png" style="float:right"></h1>
+            </ion-card-title>
+          <p id="cardinfo" >
+              Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.TimeWithMultChar}} 
+          </ion-card-content>
+        </ion-card>
+        <ion-card *ngIf="card.Airport" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour">
+          <ion-card-content>
+            <ion-card-title>
+            {{card.name}} <h1> <img src= "./assets/imgs/Airplane.png" style="float:right"></h1>
+            </ion-card-title>
+          <p id="cardinfo" >
+              Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.TimeWithMultChar}} 
+          </ion-card-content>
+        </ion-card>
+      </ion-item>
+    </ion-list>
+    </ion-scroll>
+    </div>
+    
 </ion-content>
