Big ol commit changed some stuff forgot what it was #thick

--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -15,7 +15,7 @@
     <img src= {{this.Data.origin_icon}} style="vertical-align: middle;"></p>
   <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
  
-   Routes to Imaging Capable Hospital
+   Routes to Imaging Capable Hospitals
   </h4>
   <spinner *ngIf="Spinner"></spinner>
   <div class="card-scroll" *ngIf="show">
