--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -80,10 +80,10 @@
   
     </div>
 
-    <div #Map class="map" style="height: 65vh" (mapClick)="onMapClick($event)"></div>
-<div style="height: 5vh;">
+    <div #Map class="map" style="height: 80vh" (mapClick)="onMapClick($event)"></div>
+<!--<div style="height: 5vh;">
   <button class="contact" ion-button color="steelblue1" block on-click="GoToContact()">Contact Information</button>
-</div>
+</div>-->
   
     <!--<div id="Legend">
       <ion-grid  ><!- - the part of the page containing the labels for the legend with the images of the icons - ->
