--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -7,7 +7,7 @@
   <components-timer ></components-timer>
 </ion-header>
 
-<ion-content padding id="page4">
+<ion-content no-bounce id="page4">
   
   <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
     Routes To EVT Capable Hospitals
