--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -9,7 +9,7 @@
 
 <script src="treatment.ts"></script>
 
-<ion-content padding id="page4">
+<ion-content no-bounce id="page4">
   <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b>
     <img src= {{this.Data.origin_icon}} style="vertical-align: middle;"></p>
   <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
