--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -60,6 +60,7 @@
   <spinner *ngIf="evtSpinner"></spinner>
   <div class="card-scroll" *ngIf="evtshow">
   <ion-scroll scrollY="true" style="height: 20vh;">
+    <div *ngIf="evtEmpty"><br><br><br><p style="font-size: large;">{{message}}</p></div>
     <ion-list justify-content-center align-items-center>
       <ion-item *ngFor="let card of EvtCards">
         <ion-card *ngIf="card.Driving" tappable (click)="goToRoute(card)" text-wrap [style.background-color]="card.colour">
