--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -6,8 +6,6 @@
   </ion-navbar>
 </ion-header>
 <ion-content no-bounce padding class="card" style="height: 100vh;" id="page2">
- <!-- <ion-grid style="height :100%">
-<ion-row justify-content-center align-items-center style="height: 100%"> remove to center the text all in the middle-->
 <div style="height:10vh;"></div>
   <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;font-size: xx-large;">
     What time was the patient last known to be well?
@@ -16,25 +14,15 @@
   <form [formGroup]="timeForm" (ngSubmit)="SubmitTime()"><!--The last known well in hour format-->
     <ion-item id="lastKnownWellTime">
       <ion-label>Time in EST</ion-label>
-      <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" [(ngModel)]="myDate" formControlName="time1"></ion-datetime>
+      <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" [(ngModel)]="myDate" formControlName="time1"></ion-datetime><!--The time picker without the date included -->
     </ion-item>
+    <!--I still need to look into how to properly space this out for a full screen app might need to have it with pixels from the height in the Data Provider -->
     <div class="spacer" style="height:3vh;" id="lastKnownWell-spacer7"></div>
     <!--Break between inputs and the button to make it consistent-->
     <div class="spacer" style="height:10vh;" id="lastKnownWell-spacer7"></div>
     <br>
-    <button  id="lastKnownWell-button2" ion-button color="steelblue1" [disabled]="!timeForm.valid" type="submit" block >
+    <button  id="lastKnownWell-button2" ion-button color="steelblue1" [disabled]="!timeForm.valid" type="submit" block ><!--The button will not be acessable until a value is entered for the time-->
       Next
     </button>
   </form>
-  <!--<div class="spacer" style="height:100px;" id="lastKnownWell-spacer7"></div>
-  
-  <div class="spacer" style="height:100px;" id="lastKnownWell-spacer8"></div>
-  <div id="lastKnownWell-markdown2" style="text-align:center;" class="show-list-numbers-and-dots">-->
-   <!-- <p style="color:#000000;font-size:12px;">
-      Contact the Acute Stroke Physician or RCCR or Critical Care (this will be based on the patient location and the process in place to support the location - see access to Acute Stroke Services MAP)
-    </p>-->
-  <!--</div>-->
-
-<!--</ion-row>
-</ion-grid>-->
 </ion-content>
