Cleaned and commented the Imaging required pages

--- a/src/pages/imaging-required/imaging-required.html
+++ b/src/pages/imaging-required/imaging-required.html
@@ -13,6 +13,7 @@
     Does the patient require imaging?
   </h3>
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
+  <!--this is a simple decision page with some options that are used to navigate the app although the spacer function will probably need to be changed once that is figured out-->
   <button id="imagingRequired-button3" ion-button color="steelblue1" block on-click="goToImagingRoutes()">
     Yes 
   </button>
