--- a/src/pages/t-pa-question/t-pa-question.html
+++ b/src/pages/t-pa-question/t-pa-question.html
@@ -7,7 +7,7 @@
   <components-timer></components-timer>
 </ion-header>
 
-<ion-content padding id="page3">
+<ion-content padding id="tPA-Question">
     
   <h3 id="imagingRequired-heading3" style="color:#000000;font-weight:400;font-size: xx-large;">
     Has your patient had tPA?
