--- a/src/pages/imaging-required/imaging-required.html
+++ b/src/pages/imaging-required/imaging-required.html
@@ -7,7 +7,7 @@
   <components-timer></components-timer>
 </ion-header>
 
-<ion-content padding id="page3">
+<ion-content padding id="imaging-required">
    
   <h3 id="imagingRequired-heading3" style="color:#000000;font-weight:400;font-size: xx-large;">
     Does the patient require imaging?
