--- a/src/pages/t-pa-question/t-pa-question.html
+++ b/src/pages/t-pa-question/t-pa-question.html
@@ -12,6 +12,7 @@
   <h3 id="imagingRequired-heading3" style="color:#000000;font-weight:400;font-size: xx-large;">
     Has your patient had tPA?
   </h3>
+  <!--This is a simple decision page that will bring you to the EVT-options page if you select yes and the treatment page with both EVT and tPA if you select no -->
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
   <button id="imagingRequired-button3" ion-button color="steelblue1" block on-click="goToEVTOptions()">
     Yes 
