--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -7,9 +7,9 @@
   <components-timer></components-timer>
 </ion-header>
 
-<script src="imaging.ts"></script>
 
-<ion-content no-bounce  id="page4">
+
+<ion-content no-bounce  id="Imaging">
 
   <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b>
     <img src= {{this.Data.origin_icon}} style="vertical-align: middle;"></p>
