--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="steelblue2">
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <ion-icon name="menu"></ion-icon><!--This was a page that acted as a side menu but we took it out because it was confusing-->
     </button>
     <ion-title>
       Help
