Included the PDF Viewer and fixed the ambulance base Issue If there is a problem with the JSON it is probably this commit

--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -39,5 +39,7 @@
       Next
     </button>
   </form>
-
+  <!--
+  <button ion-button (click)="OpenPdf();">Open a PDF</button>
+  -->
 </ion-content>
