Attempt to put on phone to test

--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -39,7 +39,7 @@
       Next
     </button>
   </form>
-  <!--
+  
   <button ion-button (click)="OpenPdf();">Open a PDF</button>
-  -->
+  <div id="imgTest"></div>
 </ion-content>
