I have a working version of the pdf viewer just need to look at it on phone

--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -40,6 +40,6 @@
     </button>
   </form>
   
-  <button ion-button (click)="OpenPdf();">Open a PDF</button>
+  <button ion-button (click)="OpenPdf('StrokeCare.pdf');">Open a PDF</button>
   <div id="imgTest"></div>
 </ion-content>
