--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -40,6 +40,6 @@
     </button>
   </form>
   
-  <button ion-button (click)="OpenPdf('Stroke.pdf');">Open a PDF</button>
+  <button ion-button (click)="OpenPdf('StrokeCare.pdf');">Open a PDF</button>
   <div id="imgTest"></div>
 </ion-content>
