Changed the title text for all of the pages and changed the weather location for the treatment page

--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="steelblue2">
+  <ion-navbar color="steelblue2" text-center>
     <ion-title>
       EVT Routes
     </ion-title>
