--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -1,7 +1,7 @@
 
   <ion-header><!-- sets the header for the page with -->
     
-      <ion-navbar color="steelblue2">
+      <ion-navbar color="steelblue2" text-center>
         <ion-title>
           Mapping Routes<!-- the title of the page -->
         </ion-title>
