--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="steelblue2">
+  <ion-navbar color="steelblue2" text-center>
     <ion-buttons start>
        <button ion-button icon-only menuToggle>
          <ion-icon name="menu"></ion-icon>
