--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -9,15 +9,14 @@
 
 <ion-content no-bounce id="evt-options">
 
-  <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b>
-    <img src= {{this.Data.origin_icon}} style="vertical-align: middle;"></p> <!--This Section shows the weather in the origin city which may affect the decision of how the patient will be transported-->
 
   <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
     Routes To EVT Capable Hospitals
   </h4>
-  <spinner *ngIf="evtSpinner"></spinner><!--This is the spinner component that runs until results are available-->
+  <spinner *ngIf="evtSpinner" style="height: 70vh;"></spinner><!--This is the spinner component that runs until results are available-->
   <div class="card-scroll" *ngIf="evtshow"><!--This creates the scroll div with all of the cards and is visable after evtshow is set to true-->
-  <ion-scroll scrollY="true" style="height: 80vh;"><!--This is the actual compnent for the scroll with the vh probably needing to change and horizontal scroll not enabled -->
+    <p style="background-color: yellow;" text-center>Click on the route option for next steps</p>
+  <ion-scroll scrollY="true" style="height: 70vh;"><!--This is the actual compnent for the scroll with the vh probably needing to change and horizontal scroll not enabled -->
     <div *ngIf="evtEmpty"><br><br><br><p style="font-size: large;">{{message}}</p></div><!--If there are no results returned display the error message  -->
     <ion-list justify-content-center align-items-center>
       <ion-item *ngFor="let card of cards"><!--The ngFor will iterate through all elements in cards and give each one the name card -->
@@ -52,5 +51,7 @@
     </ion-list>
     </ion-scroll><!--Close all of the divs exactly the same way it is done in HTML-->
     </div>
-
+    <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b>
+      <img src= {{this.Data.origin_icon}} style="vertical-align: middle;"></p> <!--This Section shows the weather in the origin city which may affect the decision of how the patient will be transported-->
+  
 </ion-content>
