- added loading on to my phone from computer - fixed the pdf viewer part - Added a seperate button to look at a website

--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -41,5 +41,6 @@
   </form>
   
   <button ion-button (click)="OpenPdf('StrokeCare.pdf');">Open a PDF</button>
-  <div id="imgTest"></div>
+  <br>
+  <button ion-button (click)="OpenWebsite('https://tbrhsc.net/');">Open a Website</button>
 </ion-content>
