--- a/src/pages/lkw-modal/lkw-modal.html
+++ b/src/pages/lkw-modal/lkw-modal.html
@@ -18,6 +18,8 @@
 <br><br>
 <p>This screen asks for both the date and time that the patient was last known to be well. The current date and time should be filled already</p>
 <br><br><br>
+<button ion-button (click)="CallNumber()">Call a Number</button>
+<p [innerText]="message"></p>
 <p>The time passed since the patient was last known to be well determines what kind of treatment they are eligible to receive</p>
 <br><br>
 <ul>
