cleaned up some stuff for the meeting

--- a/src/pages/lkw-modal/lkw-modal.html
+++ b/src/pages/lkw-modal/lkw-modal.html
@@ -18,7 +18,7 @@
 <br><br>
 <p>This screen asks for both the date and time that the patient was last known to be well. The current date and time should be filled already</p>
 <br><br><br>
-<button ion-button (click)="CallNumber()">Call a Number</button>
+<!--<button ion-button (click)="CallNumber()">Call a Number</button>-->
 <p id="test"></p>
 <a href="tel:+14039092432">Call</a>
 <p>The time passed since the patient was last known to be well determines what kind of treatment they are eligible to receive</p>
