- Added new next steps page - tested new page and modified flow - made some modifications to the looks of the treatment pages

--- a/src/pages/lkw-modal/lkw-modal.html
+++ b/src/pages/lkw-modal/lkw-modal.html
@@ -20,7 +20,7 @@
 <br><br><br>
 <!--<button ion-button (click)="CallNumber()">Call a Number</button>-->
 <p id="test"></p>
-<a href="tel:+14039092432">Call</a>
+<a href="tel:+14039092432">Call a Number</a>
 <p>The time passed since the patient was last known to be well determines what kind of treatment they are eligible to receive</p>
 <br><br>
 <ul>
