Added just cities to the locations and created a new page to deal with them

--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -30,13 +30,19 @@
   <ion-scroll scrollY="true" style="height: 40vh;">
   <div *ngFor="let health_centres of Medical_Centers"><!--*ngFor is a special function of ionic that allows it to go through and display every part of a list in this case all the parts returned by the search function -->
 <!--Tried the height to fix it probably does nothing and no screen size is that small-->
-    <button type ="button" padding  id="patientLocation-button1" text-wrap style="font-size: auto;" ion-button color="steelblue1"  fill="outline"  block on-click="getLatLng(health_centres)" >
+    <button type ="button" padding *ngIf="health_centres.name; else elseText" id="patientLocation-button1" text-wrap style="font-size: auto;" ion-button color="steelblue1"  fill="outline"  block on-click="getLatLng(health_centres)" >
       <!--{{health_centres.address}}-->
-      <p>
+      <p >
         {{health_centres.name}}:  {{health_centres.city}}<!--This is another special part of ionic where it allows you to display information from the ts file -->
-        
       </p>
     </button>
+    <ng-template #elseText>
+    <button type ="button" padding  id="patientLocation-button1" text-wrap style="font-size: auto;" ion-button color="steelblue1"  fill="outline"  block on-click="goToCityPage(health_centres)" >
+      <p>
+        {{health_centres.city}}<!--This is another special part of ionic where it allows you to display information from the ts file -->
+      </p>
+    </button>
+  </ng-template>
   </div>
 
   <div *ngIf="Medical_Centers?.length < 1"><!--ngIf is another ionic specific thing that only shows if the value is true in this case if there are no results it will show the No results text if the length of the list is less than one  -->
