--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -1,12 +1,6 @@
-<!--
-  Generated template for the CityPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-  <ion-navbar>
-    <ion-title>city</ion-title>
+  <ion-navbar color="steelblue2" text-center>
+    <ion-title style="font-size: x-large;">Care Instructions</ion-title>
   </ion-navbar>
 </ion-header>
 
